--- a/Api_Project/EnginePlatform/EnginePlatform.vcxproj
+++ b/Api_Project/EnginePlatform/EnginePlatform.vcxproj
@@ -167,10 +167,11 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="EngineSound.h">
+    <ClInclude Include="EngineResources.h">
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EngineSound.h" />
     <ClInclude Include="EngineWindow.h">
       <SubType>
       </SubType>
@@ -193,10 +194,11 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="EngineSound.cpp">
+    <ClCompile Include="EngineResources.cpp">
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="EngineSound.cpp" />
     <ClCompile Include="EngineWindow.cpp">
       <SubType>
       </SubType>
