--- a/Api_Project/EngineBase/EngineBase.vcxproj
+++ b/Api_Project/EngineBase/EngineBase.vcxproj
@@ -183,6 +183,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EngineSerializer.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="EngineString.h">
       <SubType>
       </SubType>
@@ -222,6 +226,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="EnginePath.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="EngineSerializer.cpp">
       <SubType>
       </SubType>
     </ClCompile>
