--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -63,6 +63,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Monster_Fire.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="pengi_Ice.cpp">
       <SubType>
       </SubType>
@@ -120,6 +124,10 @@
     </ClInclude>
     <ClInclude Include="ModeEnum.h" />
     <ClInclude Include="Monster_Base.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Monster_Fire.h">
       <SubType>
       </SubType>
     </ClInclude>
