--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -79,6 +79,14 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Stage2_Level.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Stage2_Map.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Sword_Monster.cpp">
       <SubType>
       </SubType>
@@ -140,6 +148,14 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Stage1_MAP.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Stage2_Level.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Stage2_Map.h">
       <SubType>
       </SubType>
     </ClInclude>
