--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
@@ -47,6 +47,12 @@
     <ClCompile Include="Monster_Fire.cpp">
       <Filter>Stage_Actor\Monster</Filter>
     </ClCompile>
+    <ClCompile Include="Stage2_Level.cpp">
+      <Filter>ContentsLevel</Filter>
+    </ClCompile>
+    <ClCompile Include="Stage2_Map.cpp">
+      <Filter>Stage_Actor\Stage1_Map</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TitleLevel.h">
@@ -95,6 +101,12 @@
     </ClInclude>
     <ClInclude Include="Monster_Fire.h">
       <Filter>Stage_Actor\Monster</Filter>
+    </ClInclude>
+    <ClInclude Include="Stage2_Level.h">
+      <Filter>ContentsLevel</Filter>
+    </ClInclude>
+    <ClInclude Include="Stage2_Map.h">
+      <Filter>Stage_Actor\Stage1_Map</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
