--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -59,6 +59,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="LevelCommon.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Monster_Base.cpp">
       <SubType>
       </SubType>
@@ -127,6 +131,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Kirby_Player.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="LevelCommon.h">
       <SubType>
       </SubType>
     </ClInclude>
