--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
@@ -53,6 +53,7 @@
     <ClCompile Include="Stage2_Map.cpp">
       <Filter>Stage_Actor\Stage_Map</Filter>
     </ClCompile>
+    <ClCompile Include="LevelCommon.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TitleLevel.h">
@@ -108,6 +109,7 @@
     <ClInclude Include="Stage2_Map.h">
       <Filter>Stage_Actor\Stage_Map</Filter>
     </ClInclude>
+    <ClInclude Include="LevelCommon.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ContentsLevel">
