--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
@@ -35,7 +35,7 @@
     <ClCompile Include="pengi_Ice.cpp">
       <Filter>Stage_Actor\Monster</Filter>
     </ClCompile>
-    <ClCompile Include="Sword_Monster.cpp">
+    <ClCompile Include="Monster_Sir.cpp">
       <Filter>Stage_Actor\Monster</Filter>
     </ClCompile>
     <ClCompile Include="Kirby_HpBar.cpp">
@@ -87,7 +87,7 @@
     <ClInclude Include="pengi_Ice.h">
       <Filter>Stage_Actor\Monster</Filter>
     </ClInclude>
-    <ClInclude Include="Sword_Monster.h">
+    <ClInclude Include="Monster_SIr.h">
       <Filter>Stage_Actor\Monster</Filter>
     </ClInclude>
     <ClInclude Include="Kirby_HpBar.h">
