--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -67,6 +67,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Sir.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Stage1_Level.cpp">
       <SubType>
       </SubType>
@@ -132,6 +136,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="pengi_Ice.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Sir.h">
       <SubType>
       </SubType>
     </ClInclude>
