--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -91,6 +91,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Stage3_Level.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="TitleActor.cpp">
       <SubType>
       </SubType>
@@ -160,6 +164,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Monster_SIr.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Stage3_Level.h">
       <SubType>
       </SubType>
     </ClInclude>
