--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="Stage3_Level.cpp">
       <Filter>ContentsLevel</Filter>
     </ClCompile>
+    <ClCompile Include="Stage3_Map.cpp">
+      <Filter>Stage_Actor\Stage_Map</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TitleLevel.h">
@@ -113,6 +116,9 @@
     </ClInclude>
     <ClInclude Include="Stage3_Level.h">
       <Filter>ContentsLevel</Filter>
+    </ClInclude>
+    <ClInclude Include="Stage3_Map.h">
+      <Filter>Stage_Actor\Stage_Map</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
