--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -95,6 +95,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Stage3_Map.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="TitleActor.cpp">
       <SubType>
       </SubType>
@@ -168,6 +172,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Stage3_Level.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Stage3_Map.h">
       <SubType>
       </SubType>
     </ClInclude>
