--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -99,6 +99,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="SubBoss.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="TitleActor.cpp">
       <SubType>
       </SubType>
@@ -176,6 +180,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Stage3_Map.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="SubBoss.h">
       <SubType>
       </SubType>
     </ClInclude>
