--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -63,6 +63,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Monster_Mike.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="pengi_Ice.cpp">
       <SubType>
       </SubType>
@@ -144,6 +148,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Monster_Fire.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Monster_Mike.h">
       <SubType>
       </SubType>
     </ClInclude>
