--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -55,6 +55,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="LastBoss_Level.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Monster_Base.cpp">
       <SubType>
       </SubType>
@@ -139,6 +143,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Kirby_Player.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="LastBoss_Level.h">
       <SubType>
       </SubType>
     </ClInclude>
