--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -59,6 +59,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Last_Map.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Monster_Base.cpp">
       <SubType>
       </SubType>
@@ -147,6 +151,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="LastBoss_Level.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Last_Map.h">
       <SubType>
       </SubType>
     </ClInclude>
