--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -39,6 +39,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="BossHpBar.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Game_Core.cpp">
       <SubType>
       </SubType>
@@ -131,6 +135,10 @@
     </ClInclude>
     <ClInclude Include="AllStar.h" />
     <ClInclude Include="Base.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="BossHpBar.h">
       <SubType>
       </SubType>
     </ClInclude>
